chore: atualizar dependências e scripts no package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ON36-IJS-Projeto-Guiado",
+  "name": "@on36/ijs-projeto-guiado",
   "version": "0.0.1",
   "description": "",
   "author": "",
