Atualizar package.json e remover arquivos e módulos relacionados a alunos
- Atualização no package.json
- Remoção de arquivos e módulos de controle, serviço, repositório e DTOs de alunos
- Atualização no módulo principal da aplicação

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": ".",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
@@ -65,7 +65,8 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
-    "coverageDirectory": "../coverage",
+    "coverageDirectory": "coverage",
     "testEnvironment": "node"
   }
+  
 }
